[project]
name = "ccupp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hanzi2pinyin>=0.1",
    "jinja2>=3.1.6",
    "pydantic>=2.0",
    "pypinyin>=0.55.0",
    "pyyaml>=6.0",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "typer>=0.20.0",
]
