[project]
name = "ccupp"
version = "0.1.0"
description = "Chinese Common User Passwords Profiler — generate weak password dictionaries from personal information using social engineering insights"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pypinyin>=0.55.0",
    "pyyaml>=6.0",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "typer>=0.20.0",
]

[project.scripts]
ccupp = "ccupp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship the package together with its PEP 561 typing marker and data files.
packages = ["ccupp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.17",
    "types-pyyaml>=6.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["ccupp"]

[[tool.mypy.overrides]]
# Optional PassLLM benchmark backend — these modules only exist when the user
# has cloned/installed PassLLM, so their imports cannot be resolved at lint time.
module = ["torch.*", "src.*", "inference.*"]
ignore_missing_imports = true
